--- a/06/css/style.css
+++ b/06/css/style.css
@@ -2,7 +2,7 @@
 ul li {list-style-type: none}
 a {text-decoration: none}
 .cf:after{content: '';display: table;clear: both}
-
+body{ font-family: Segoe UI Light, Calibri; }
 
 
 .top-up{
@@ -41,36 +41,39 @@ a {text-decoration: none}
     font-size: 14px;
 
 }
-.ss .fd {
-    position: absolute;
-    line-height: 44px;
-    top: 2px;
-    right: 0px;
-    width: 43px;
-    height: 43px;
+.ss #text:hover{
+    cursor:pointer;
+}
 
+.ss .fd img{
+    position: absolute;
+    top: 1px;
+    right: 0px;
+    width: 44px;
+    height: 44px;
 }
 .top-milled{
     width: 1200px;
     margin: 6px auto 0;
-    padding-left: 2px;
     line-height: 54px;
-
 }
 .list{
     float: left;
     width: 900px;
-
     margin-left: -237px;
+
 }
 .list li{
     float: left;
-    font-size: 16px;
-
-    padding-left: 2px;
-    display: block;
+    display: inline-block;
     width: 102px;
     height: 54px;
+    font-size: 16px;
+    padding-left: 2px;
+}
+.list li a{
+    color: #000;
+
 }
 .top-milled .right {
     float: right;
@@ -80,16 +83,22 @@ a {text-decoration: none}
     width: 63px;
     height: 27px;
     color: #fff;
-
+    background: #e9422c;
     border: none;
 }
+.right #ju:hover{
+    cursor:pointer;
+}
 .right #lg {
-    width: 54px;
+    width: 63px;
     height: 27px;
     color: #fff;
-    margin-left: -7px;
-    border: none;
-    background-color: #a1a1a1;
+    margin-left:-2px;
+    border: 0 none;
+    background: #a1a1a1;
+}
+.right #lg:hover{
+    cursor:pointer;
 }
 .fort-box{
     width: 100%;
@@ -103,25 +112,27 @@ a {text-decoration: none}
     line-height: 47px;
     width: 1200px;
     margin: 0 auto;
-
     color: #ffffff;
 }
 .anv li{
     float: left;
-    display: block;
     text-align: center;
-    height: 47px;
-    padding: 0 22px  ;
     position: relative;
-
+}
+.anv li a{
+    color: #fff;
+    display:block;
+    height: 47px;
+    width: 122px;
 }
 .anv li:hover{
     background: #e9422c;
+
 }
 .anv li span{
     position: absolute;
-    top: 0px;
-    right:-3px;
+    top: 0;
+    right:0;
     color: #e9422c;
 }
 /*-------------------------------------------------------------------------------------*/
@@ -137,9 +148,9 @@ a {text-decoration: none}
     float: left;
 }
 .middle-left-log{
-    width: 100%;
+    font-size: 32px;
     height: 32px;
-    line-height: 32px;
+    line-height: 28px;
     padding-left: 42px;
     margin-top: 20px;
     background: url("../images/m_03.png") no-repeat;
@@ -192,25 +203,25 @@ a {text-decoration: none}
     background: #ff5842;
     color: #ffffff;
 }
+.middle #btn:hover{ cursor:pointer;}
 /*---------------------------------------*/
 .middle-right {
-    width: 304px;
+    width: 300px;
     height: 2378px;
 
     float: right;
 }
 /*-----------------------------------------*/
 .middle-right-log{
-
+    font-size: 32px;
     height: 32px;
-    line-height: 32px;
+    line-height: 28px;
     padding-left: 40px;
-    font-size: 18px;
     margin-top: 20px;
     background: url("../images/01_img_07.png") no-repeat;
 }
 .middle-right-img .log{
-    width: 306px;
+    width: 300px;
     height: 149px;
     margin-top: 22px;
     background: url("../images/02_img_03.png") no-repeat;
@@ -221,23 +232,31 @@ a {text-decoration: none}
     display: inline-block;
     width: 43px;
     height: 43px;
-border: 1px solid red;
-    margin: 0 6px 6px  0;
+    margin: 0 8px 8px  0;
+    background: #000000;
+    filter:alpha(opacity=0);
+    -moz-opacity:0;
+    opacity:0;
+
+}
+.middle-right-img .log .five{
+    margin-right: 0;
 }
 .middle-right-img .log li:hover{
     cursor: pointer;
 }
 .middle-right-c p{
     height: 72px;
-    line-height: 72px;
-    padding-left: 48px;
+    line-height: 58px;
+    font-size: 32px;
+    padding-left: 40px;
     background: url("../images/2_img1_03.png") no-repeat 0 22px;
 }
 .middle-right-c-ul li{
     float: left;
+
     display: block;
-    width: 150px;
-    height: 40px;
+
     line-height: 40px;
     text-align: center;
     background: #f6f6f6;
@@ -245,6 +264,9 @@ border: 1px solid red;
 }
 .middle-right-c-ul li a{
     color: #8f8f8f;
+    display: block;
+    width: 149px;
+    height: 40px;
 }
 .middle-right-c-ul li:hover a{
     color: #fff;
@@ -255,19 +277,18 @@ border: 1px solid red;
 }
 .middle-right-a {
     height: 72px;
-
-    line-height: 74px;
-    padding-left: 42px;
-
+    line-height: 68px;
+    font-size: 32px;
+    padding-left: 40px;
     background: url("../images/3n_03.png") no-repeat 0 20px;
 }
 .middle-right-img{
-    width: 100%;
+    width: 300px;
     height: 146px;
 
 }
 .middle-right-img img{
-    width: 100%;
+    width: 300px;
     height: 146px;
 }
 .middle-right-list{
@@ -277,42 +298,52 @@ border: 1px solid red;
     margin-top: 20px;
 }
 .middle-right-list-ul{
-
+    position: relative;
 }
 .middle-right-list-ul li{
     float: left;
-    display: inline-block;
-    width: 100px;
-    height: 50px;
+
     line-height: 50px;
     border-top: 5px solid #e9422c;
     text-align: center;
     background: #ff5842;
+    position: relative;
 }
 .middle-right-list-ul li a{
     color: #fff;
+    display: inline-block;
+    width: 100px;
+    height: 50px;
 }
 .middle-right-list-ul li:hover{
     cursor: default;
     background: #e9422c;
 }
 .middle-right-list-ul li span{
-    position: relative;
+    position: absolute;
     top: 0;
-    left: 17px;
+    right:0;
     color: #e9422c ;
 }
 
 .middle-right-box{
     width: 298px;
-    height: 111px;
+    height: 554px;
     border: 1px solid #ccc;
+    border-top: none;
+}
+.middle-right-box-all{
+    width: 278px;
+    height: 90px;
+    border-bottom: 1px solid #ccc;
+    padding: 10px 0;
+    margin:  0 10px;
 }
  .middle-right-box1 {
     float: left;
     width: 90px;
     height: 90px;
-    margin: 10px;
+
 
 }
 .middle-right-box1 img{
@@ -322,8 +353,8 @@ border: 1px solid red;
 .middle-right-box2 {
     float: right;
     line-height: 22px;
-    margin: 10px 5px 10px ;
-    font-size: 14px;
+    font-size: 16px;
+    padding-right: 10px;
 }
 .middle-right-box2 p:first-child a{
     color: #333;
@@ -333,26 +364,30 @@ border: 1px solid red;
 }
 .middle-right-box2 p span {
     color: #e9422c;
+    font-size: 12px;
 }
 /*----------------*/
 .middle-right-t {
     height: 72px;
-
-    line-height: 72px;
-    padding-left:38px;
-    background: url("../images/06_03.png") no-repeat 0 20px;
+    line-height: 68px;
+    font-size: 32px;
+    padding-left: 40px;
+    background: url("../images/06_03.png") no-repeat 0  20px;
 }
 .middle-right-tul li{
     float: left;
-    display:inline-block;
-    height: 36px;
+
     line-height: 36px;
-    padding: 0 10px;
+    font-size: 14px;
+
     margin: 0 4px 4px 0;
     background: #f6f6f6;
 }
 .middle-right-tul li a {
     color: #8f8f8f;
+    display:inline-block;
+    height: 36px;
+    padding: 0 10px;
 }
 .middle-right-tul li:hover a{
     color: #fff;
@@ -362,12 +397,13 @@ border: 1px solid red;
 }
 .middle-right-vid{
     height: 272px;
-    width: 300px;
-    line-height: 72px;
+
+    line-height: 68px;
     background: url("../images/06-Column_04 (2).png") no-repeat 0 20px;
 }
 .middle-right-vid p{
-    padding-left:38px;
+    font-size: 32px;
+    padding-left: 40px;
 }
 .middle-right-v{
 
@@ -376,8 +412,9 @@ border: 1px solid red;
 .middle-right-w {
     height: 72px;
 
-    line-height: 72px;
-    padding-left: 38px;
+    line-height: 68px;
+    font-size: 32px;
+    padding-left: 40px;
     background: url("../images/07_portfolio_1-Column_09.png") no-repeat 0 20px;
 }
 .middle-right-tw p {
@@ -407,7 +444,8 @@ border: 1px solid red;
     height: 72px;
 
     line-height: 72px;
-    padding-left: 38px;
+    font-size: 32px;
+    padding-left: 40px;
     background: url("../images/9_portfolio_1-Column_09.png") no-repeat 0 20px;
 }
 .middle-right-p2{
@@ -433,7 +471,10 @@ border: 1px solid red;
     color: #fff;
     position: absolute;
     top: 0;
-    right: 0px;
+    right: 0;
+}
+.middle-right-p3 .s:hover{
+    cursor:pointer;
 }
 
 /*-----------------------------------------*/
@@ -451,21 +492,17 @@ border: 1px solid red;
 }
 .left h2{
 
-    height: 32px;
     line-height: 32px;
-
     text-indent: 2em;
     color: #ffffff;
-    position: relative;
-    top: 20px;
-    left: 0;
+
     background: url("../images/13_portfolio_1-Column_13.png") no-repeat;
 }
 
 .footer .container .text{
     width: 370px;color: #738e9a;text-align: justify;
 
-    margin-top: 20px;
+
     position: absolute;
 }
 
@@ -499,7 +536,6 @@ border: 1px solid red;
 /*--------------7页-----------------*/
 .left-list{
     width:900px;
-
     margin-top: 20px;
 
 }
@@ -512,10 +548,14 @@ border: 1px solid red;
 
 
 }
+.left-list-box img{
+    width: 426px;
+    height: 400px;
+}
 .left-list-box dd{
     width: 426px;
     height: 400px;
-    border: 1px solid #eee;
+
 }
 
 
