--- a/07/css/style.css
+++ b/07/css/style.css
@@ -2,7 +2,7 @@
 ul li {list-style-type: none}
 a {text-decoration: none}
 .cf:after{content: '';display: table;clear: both}
-
+body{ font-family: Segoe UI Light, Calibri; }
 
 
 .top-up{
@@ -144,45 +144,46 @@ a {text-decoration: none}
     margin-top: 20px;
     background: url("../images/m_03.png") no-repeat;
 }
-.middle-left-img{
-    width:100%;
-    height: 486px;
-    margin-top: 22px;
-    border-bottom: 1px solid #ccc;
+.left-list{
+    width:900px;
+
+    margin-top: 20px;
 
 }
- .dd{
-    width: 881px;
-    height: 397px;
-    border: 1px solid #ccc;
+.left-list-box{
+    width: 426px;
+    height: 488px;
+    border: 1px solid #eee;
+    float: left;
+    margin: 0 20px 20px 0;
+
+
 }
-.dd img {
-    width: 881px;
-    height: 397px;
+.left-list-box dd{
+    width: 426px;
+    height: 400px;
+    border: 1px solid #eee;
 }
 
- .dt1{
+
+
+.left-list-dt1{
     font-size: 16px;
-    margin-top: 22px;
     padding-left: 16px;
-
-
+    line-height: 32px;
 }
-.dt2{
-    font-size: 12px;
-    margin-top: 16px;
+.left-list-dt2{
+    font-size: 2px;
     padding-left: 16px;
-    color: #d6d6d6;
+    line-height: 24px;
 }
-.middle-left-img2{
-    width:100%;
-    height: 486px;
-    margin-top: 30px;
-    border-bottom: 1px solid #ccc;
+.left-list-dt2 a {
+    color:#9f9f9f ;
 }
- .dt2 span{
-    color: #ff8376;
+.left-list-dt2 a span {
+    color: #ffb2ab;
 }
+
 .middle #btn {
     width: 182px;
     height: 45px;
@@ -495,44 +496,4 @@ border: 1px solid red;
 }
 .footer-foot .container img{
     position: absolute;right: 0;top: 7px;
-}
-/*--------------7页-----------------*/
-.left-list{
-    width:900px;
-
-    margin-top: 20px;
-
-}
-.left-list-box{
-    width: 426px;
-    height: 488px;
-    border: 1px solid #eee;
-    float: left;
-    margin: 0 20px 20px 0;
-
-
-}
-.left-list-box dd{
-    width: 426px;
-    height: 400px;
-    border: 1px solid #eee;
-}
-
-
-
-.left-list-dt1{
-    font-size: 16px;
-    padding-left: 16px;
-    line-height: 32px;
-}
-.left-list-dt2{
-    font-size: 2px;
-    padding-left: 16px;
-    line-height: 24px;
-}
-.left-list-dt2 a {
-    color:#9f9f9f ;
-}
-.left-list-dt2 a span {
-    color: #ffb2ab;
 }
